# corepack

./: .gitignore  Cargo.toml  README.md
src/: de.rs  defs.rs  error.rs  ext_deserializer.rs  ext_visitor.rs  generic.rs  lib.rs  map_serializer.rs  map_variant_serializer.rs  read.rs  seq_serializer.rs  seq_visitor.rs  ser.rs  serde_types.in.rs  variant_deserializer.rs  variant_visitor.rs
