[package]
name = "corepack"
version = "0.2.1"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
description = "A no_std support for messagepack in serde"
documentation = "https://docs.rs/corepack"
repository = "https://github.com/jrasky/corepack.git"
readme = "README.md"
keywords = ["messagepack", "binary", "encoding", "serialize"]
license = "MPL-2.0"

[dependencies]
serde = { version = "~1.0.7", default-features = false }
byteorder = { version = "~1.0", default-features = false }

[dev-dependencies]
serde_derive = "~1.0.7"

[features]
default = ["std"]

std = ["serde/std"]
collections = ["serde/collections"]
