[package]
name = "corepack"
version = "0.4.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
description = "A no_std support for messagepack in serde"
documentation = "https://docs.rs/corepack"
repository = "https://github.com/jrasky/corepack.git"
readme = "README.md"
keywords = ["messagepack", "binary", "encoding", "serialize"]
license = "MPL-2.0"

[dependencies]
serde = { version = "~1.0.10", default-features = false }
byteorder = { version = "~1.2.3", default-features = false }

[dev-dependencies]
serde_derive = "~1.0.10"

[features]
default = ["std"]

std = ["serde/std"]
alloc = ["serde/alloc"]
